<resources>
    <string name="app_name">카카오 이미지 검색</string>
    <string name="main_search_hint">검색어를 입력해주세요…</string>
    <string name="main_search_empty">%s와(과) 일치하는\n검색결과가 없습니다.</string>
    <string name="detail_display_name">%s | %s X %s</string>
    <string name="error_network_message">네트워크에 접속할 수 없습니다.\n네트워크 연결 상태를 확인해주세요.</string>

    <string name="exit_dialog_message">앱을 종료하시겠습니까?</string>
    <string name="exit_dialog_continue">계속하기</string>
    <string name="exit_dialog_app_exit">종료</string>

    <string name="in_app_text1">인앱 결제 테스트 1</string>
    <string name="in_app_text2">인앱 결제 테스트 2</string>
    <string name="in_app_text3">인앱 결제 테스트 3</string>
    <string name="in_app_text_sub_standard">인앱 결제 테스트 (정기 결제 - 스탠다드)</string>
    <string name="in_app_text_sub_premium">인앱 결제 테스트 (정기 결제 - 프리미엄)</string>
    <string name="in_app_purchase_cancel">구매가 취소 되었습니다.</string>
    <string name="in_app_purchase_unknown">현재는 구매가 불가능 합니다.</string>
    <string name="in_app_title">인앱 결제 테스트 (Ver 3.0)</string>
</resources>
